unpackaged/main/default/objects/Candidates__c/Candidates__c.object-meta.xml
<CustomObject>
    <label>Candidates</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>