unpackaged/main/default/objects/Candidates__c/fields/Relevant_Exp__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Exp__c</fullName>
    <label>Relevant Exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>