unpackaged/main/default/objects/Candidates__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <length>100</length>
    <type>Text</type>
</CustomField>