unpackaged/main/default/objects/Candidates__c/fields/Total_Years_experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Years_experience__c</fullName>
    <label>Total Years experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>